--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axion-planetary-mcp",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "🌍 Transform any MCP client into a Geospatial Analysis Powerhouse with Google Earth Engine",
   "private": false,
   "type": "module",
@@ -61,7 +61,7 @@
     "setup:check": "node setup-check.js",
     "dev": "tsx watch src/index.ts",
     "build": "tsup src/index.ts --format esm --dts --clean",
-    "build:next": "next build",
+    "build:next": "echo 'Build already included in package'",
     "start": "node dist/index.mjs",
     "start:next": "next start",
     "lint": "next lint",
