--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axion-planetary-mcp",
-  "version": "1.2.26",
+  "version": "1.2.27",
   "description": "🌍 The Foundation for Democratizing Geospatial AI Agents - Transform PhD-level Earth observation into natural conversation",
   "private": false,
   "type": "module",
@@ -13,6 +13,7 @@
     "dist/",
     ".next/",
     "app/",
+    "components/",
     "pages/",
     "public/",
     "styles/",
